fix(Drop File): Fix 'Chat -  If you copy paste a invalid image, gets stuck on scanning image'

--- a/components/tailored/core/fileupload/FileUpload.less
+++ b/components/tailored/core/fileupload/FileUpload.less
@@ -75,6 +75,11 @@
         margin-left: @light-spacing;
       }
     }
+    .nsfw-text {
+      h1 {
+        margin-right: @light-spacing;
+      }
+    }
   }
 }
 
